# Neu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  cifar10.yaml  retrieve_data.sh
cmake/Modules/: Findfreeimageplus.cmake
doc/: CMakeLists.txt
example/: CMakeLists.txt
example/average_pooling_layer/: CMakeLists.txt  main.cpp
example/cifar10/: CMakeLists.txt  main.cpp
example/cifar10_deepcnet/: CMakeLists.txt  main.cpp
example/cifar10_easy/: CMakeLists.txt  main.cpp
example/cifar10_mini/: CMakeLists.txt  main.cpp
example/cifar10_xavier/: CMakeLists.txt  main.cpp
example/convolution/: CMakeLists.txt  main.cpp
example/convolution_layer/: CMakeLists.txt  main.cpp
example/deepcnet/: CMakeLists.txt  main.cpp
example/dropout_layer/: CMakeLists.txt  main.cpp
example/fully_connected_layer_learning_xor/: CMakeLists.txt  main.cpp
example/fully_connected_layer_learning_xor_sigmoid/: CMakeLists.txt  main.cpp
example/local_contrast_normalization_layer/: CMakeLists.txt  main.cpp
example/max_pooling_layer/: CMakeLists.txt  main.cpp
example/mnist/: CMakeLists.txt  main.cpp
example/mnist_conv/: CMakeLists.txt  main.cpp
example/mnist_conv_xavier/: CMakeLists.txt  main.cpp
example/shared_dropout_layer/: CMakeLists.txt  main.cpp
example/xor_sigmoid/: CMakeLists.txt  main.cpp
example/xor_sigmoid_node/: CMakeLists.txt  main.cpp
example/xor_softmax/: CMakeLists.txt  main.cpp
neu/: activation_layer.hpp  as_const.hpp  assert.hpp  average_pooling_layer.hpp  basic_type.hpp  convolution_layer.hpp  data_set.hpp  error_func.hpp  fully_connected_layer.hpp  gpu_buffer_range.hpp  image.hpp  kernel.hpp  layer.hpp  layer_parameter.hpp  layer_traits.hpp  layer_yaml.hpp  layers_algorithm.hpp  learning_rate_gen.hpp  local_responce_normalization_layer.hpp  max_pooling_layer.hpp  neural_net.hpp  range_algorithm.hpp  range_traits.hpp  softmax_with_loss_function_layer.hpp  validation.hpp  vector_io.hpp
neu/activation_func/: derivative.hpp  derivative_for_loss.hpp  differential.hpp  identity.hpp  leaky_rectifier.hpp  rectifier.hpp  sigmoid.hpp  sigmoid_loss.hpp  softmax.hpp  softmax_loss.hpp  tanh.hpp
neu/activation_layer/: impl.hpp  layer_traits.hpp  parameter.hpp
neu/average_pooling_layer/: impl.hpp  kernel_source.hpp  parameter.hpp
neu/convolution_layer/: convolution_layer_impl.hpp  factory.hpp  impl.hpp  indices.hpp  kernel_source.hpp  kernel_source_float4.hpp  layer_traits.hpp  parameter.hpp
neu/dataset/: batch.hpp  classification_dataset.hpp  load_cifar10.hpp  load_mnist.hpp
neu/fully_connected_layer/: fully_connected_layer_impl.hpp  impl.hpp  kernel_source.hpp  layer_traits.hpp  parameter.hpp
neu/graph/: any_node.hpp  graph_builder.hpp  node.hpp
neu/layer/: activation.hpp  any_layer.hpp  any_layer_vector.hpp  average_pooling.hpp  batch_normalization.hpp  bias.hpp  convolution.hpp  convolution_optimized.hpp  convolution_optimized_wr.hpp  deserialize.hpp  deserialize_fwd.hpp  dropout.hpp  dropout_cpu.hpp  geometric_layer_property.hpp  inner_product.hpp  inner_product_wr.hpp  io.hpp  layers_algorithm.hpp  load.hpp  load_fwd.hpp  local_contrast_normalization.hpp  max_pooling.hpp  rank_id.hpp  shared_dropout.hpp  traits.hpp
neu/layer/activation/: impl.hpp  leaky_rectifier.hpp  rectifier.hpp  sigmoid.hpp  sigmoid_loss.hpp  softmax_loss.hpp
neu/layer/average_pooling/: impl.hpp  layer_traits.hpp
neu/layer/batch_normalization/: impl.hpp  kernel_source.hpp
neu/layer/bias/: impl.hpp  kernel_source.hpp
neu/layer/convolution/: impl.hpp  indices.hpp  kernel_source.hpp
neu/layer/convolution_optimized/: impl.hpp  kernel_source.hpp
neu/layer/convolution_optimized_wr/: impl.hpp  kernel_source.hpp
neu/layer/dropout/: impl.hpp  kernel_source.hpp
neu/layer/dropout_cpu/: impl.hpp  kernel_source.hpp
neu/layer/impl/: common_kernel.hpp  convolution_indices.hpp  matrix_multiply.hpp  matrix_transpose.hpp  multiple_matrix_multiply.hpp
neu/layer/inner_product/: impl.hpp  kernel_source.hpp
neu/layer/inner_product_wr/: impl.hpp  kernel_source.hpp
neu/layer/local_contrast_normalization/: impl.hpp  kernel_source.hpp
neu/layer/max_pooling/: impl.hpp  kernel_source.hpp  layer_traits.hpp  parameter.hpp
neu/layer/ready_made/: deepcnet.hpp
neu/layer/shared_dropout/: impl.hpp  kernel_source.hpp
neu/learning_rate_gen/: adagrad.hpp  fixed_learning_rate_gen.hpp  momentum.hpp  subtract_delta_weight.hpp  weight_decay.hpp  weight_decay.hpp.back  weight_decay_and_momentum.hpp
neu/load_data_set/: load_cifar10.hpp  load_mnist.hpp
neu/node/: any_node.hpp  any_node_fwd.hpp  fixed_data.hpp  graph.hpp  layer.hpp  traits.hpp
neu/optimizer/: any_optimizer.hpp  deserialize.hpp  fixed_learning_rate.hpp  load.hpp  momentum.hpp  traits.hpp
neu/range/: algorithm.hpp  gpu_buffer_range.hpp  traits.hpp
script/: retrieve_cifar10.sh  retrieve_mnist.sh
test/: CMakeLists.txt  check_tool.hpp  context_setup.hpp  test_any_layer.cpp  test_average_pooling.cpp  test_batch_normalization.cpp  test_common_kernel.cpp  test_convolution.cpp  test_convolution_optimized.cpp  test_inner_product.cpp  test_layer_any_layer.cpp  test_max_pooling.cpp  test_momentum.cpp  test_softmax_loss.cpp  test_softmax_loss_layer.cpp
test/activation_func/: CMakeLists.txt  main.cpp
test/average_pooling_layer/: CMakeLists.txt  main.cpp
test/convolution/: CMakeLists.txt  main.cpp
test/convolution_indices/: CMakeLists.txt  main.cpp
test/convolution_layer/: CMakeLists.txt  main.cpp
test/data_set/: CMakeLists.txt  main.cpp
test/general_convolution/: CMakeLists.txt  main.cpp
test/layer/: CMakeLists.txt  layer.cpp  main.cpp
test/load_cifar10/: CMakeLists.txt  main.cpp
test/load_mnist/: CMakeLists.txt  main.cpp
test/local_responce_normalization_layer/: CMakeLists.txt  main.cpp
test/max_pooling_layer/: CMakeLists.txt  main.cpp
test/yaml_io/: .main.cpp.swp  CMakeLists.txt  main.cpp
utility/: CMakeLists.txt
utility/filter_extractor/: CMakeLists.txt  main.cpp
